--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.security:spring-security-test')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.mariadb.jdbc:mariadb-java-client")
 }
