--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,16 @@ notifications:
 # deploy 명령어가 실행되기 전에 수행된다.
 # AWS CodeDploy는 Jar 파일을 인식하지 못하기 때문에 Jar 파일과 설정 파일들을 모아 압축해야한다.
 before_deploy:
-  - zip -r springboot2-study-jojoldu * # 프로젝트명
-  - mkdir -p deploy # Travis CI가 실행중인 위치에 deploy 디렉토리 생성
-  - mv springboot2-study-jojoldu.zip deploy/springboot2-study-jojoldu.zip # 압축한 zip 파일을 deploy 디렉토리로 이동
+#  - zip -r springboot2-study-jojoldu * # 프로젝트명
+#  - mkdir -p deploy # Travis CI가 실행중인 위치에 deploy 디렉토리 생성
+#  - mv springboot2-study-jojoldu.zip deploy/springboot2-study-jojoldu.zip # 압축한 zip 파일을 deploy 디렉토리로 이동
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/springboot2-study-jojoldu.zip # deploy로 zip파일 이동
 
 deploy:
   - provider: s3
