--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,15 @@ files:
   - source: / # CodeDeploy에서 전달해준 파일 중 destination으로 이동시킬 대상
     destination: /home/ec2-user/app/step2/zip/
     overwrite: yes # 기존파일이 존재할 때 덮어 쓸지 여부
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
